[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/Bio.gd" type="Script" id=1]
[ext_resource path="res://art/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://art/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://art/Svojstva.png" type="Texture" id=4]
[ext_resource path="res://art/arrow.png" type="Texture" id=5]
[ext_resource path="res://scripts/Zadatci.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 26
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 26
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=7]

size = 26
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=8]

size = 26
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=9]

size = 26
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=10]

size = 35
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=11]

size = 35
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=12]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=13]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=14]

size = 35
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=15]

size = 35
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Bio" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Main" type="Control" parent="." index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="Main" index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -207.0
margin_top = 100.0
margin_right = 206.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "KRIŽANJE 
SVOJSTAVA"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="B_krizanja" type="Button" parent="Main" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -92.0
margin_right = 225.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "KRIŽANJA"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="B_svojstva" type="Button" parent="Main" index="2"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -225.0
margin_top = -324.0
margin_right = 225.0
margin_bottom = -204.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "SVOJSTVA"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="TB_krizanja" type="TouchScreenButton" parent="Main" index="3"]

position = Vector2( 75, 420 )
scale = Vector2( 450, 125 )
normal = null
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="TB_svojstva" type="TouchScreenButton" parent="Main" index="4"]

position = Vector2( 75, 700 )
scale = Vector2( 450, 125 )
normal = null
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Svojstva" type="Control" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="TextureRect" type="TextureRect" parent="Svojstva" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 315.0
margin_top = -525.0
margin_right = 1353.0
margin_bottom = 499.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="B_back2" type="TextureButton" parent="Svojstva" index="1"]

modulate = Color( 0.730469, 0.730469, 0.730469, 1 )
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -5.0
margin_top = 25.0
margin_right = 105.0
margin_bottom = 135.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
expand = true
_sections_unfolded = [ "Rect", "Textures", "Visibility" ]

[node name="Krizanja" type="Control" parent="." index="3"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="Krizanja" index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -270.0
margin_top = 100.0
margin_right = 62.0
margin_bottom = 172.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "KRIŽANJA"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="B_back" type="TextureButton" parent="Krizanja" index="1"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -175.0
margin_top = 50.0
margin_right = -45.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
expand = true
_sections_unfolded = [ "Rect", "Textures" ]

[node name="B_mon" type="Button" parent="Krizanja" index="2"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -262.0
margin_right = 280.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "MONOHIBRIDNO"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="B_monSND" type="Button" parent="Krizanja" index="3"]

anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -262.0
margin_right = -30.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Label" type="Label" parent="Krizanja/B_monSND" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 7 )
text = "MONOHIBRIDNO
S NEPOTPUNOM 
DOMINACIJOM"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="B_monT" type="Button" parent="Krizanja" index="4"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -374.0
margin_right = 280.0
margin_bottom = -24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Label" type="Label" parent="Krizanja/B_monT" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 9 )
text = "MONOHIBRIDNO
TEST"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="B_dihibrid" type="Button" parent="Krizanja" index="5"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -280.0
margin_top = -374.0
margin_right = -30.0
margin_bottom = -24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 10 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "DIHIBRIDNO"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="T_screen" type="Node2D" parent="Krizanja" index="6"]

editor/display_folded = true

[node name="TB_back" type="TouchScreenButton" parent="Krizanja/T_screen" index="0"]

position = Vector2( 425, 50 )
scale = Vector2( 125, 125 )
normal = null
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="TB_mon" type="TouchScreenButton" parent="Krizanja/T_screen" index="1"]

position = Vector2( 30, 250 )
scale = Vector2( 250, 350 )
normal = null
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="TB_monSND" type="TouchScreenButton" parent="Krizanja/T_screen" index="2"]

normal = null
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="TB_dihibrid" type="TouchScreenButton" parent="Krizanja/T_screen" index="3"]

normal = null
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Zadatci" type="Node" parent="." index="4"]

editor/display_folded = true
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="Zadatci" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Zadatak" type="Label" parent="Zadatci/Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 11 )
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "BBCode", "Grow Direction", "Margin", "Rect", "Visibility", "custom_colors", "custom_fonts" ]

[node name="B_odgovor" type="Button" parent="Zadatci/Panel" index="1"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -274.0
margin_right = 150.0
margin_bottom = -149.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 12 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Odgovor"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Visibility", "custom_colors", "custom_fonts" ]

[node name="TB_odgovor" type="TouchScreenButton" parent="Zadatci/Panel" index="2"]

position = Vector2( 150, 750 )
scale = Vector2( 300, 125 )
normal = null
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Odgovor" type="Label" parent="Zadatci/Panel" index="3"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 15.0
margin_top = 113.0
margin_right = 40.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 13 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]

[node name="Buttons" type="Control" parent="Zadatci/Panel" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="B_again" type="Button" parent="Zadatci/Panel/Buttons" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 25.0
margin_top = -12.0
margin_right = 250.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 14 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "NOVO"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="B_back" type="Button" parent="Zadatci/Panel/Buttons" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -12.0
margin_right = -25.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 15 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<<"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="TB_again" type="TouchScreenButton" parent="Zadatci/Panel/Buttons" index="2"]

position = Vector2( 325, 500 )
scale = Vector2( 225, 85 )
normal = null
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="TB_back" type="TouchScreenButton" parent="Zadatci/Panel/Buttons" index="3"]

position = Vector2( 50, 500 )
scale = Vector2( 225, 85 )
normal = null
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[connection signal="pressed" from="Main/B_krizanja" to="." method="_on_B_krizanja_pressed"]

[connection signal="pressed" from="Main/B_svojstva" to="." method="_on_B_svojstva_pressed"]

[connection signal="pressed" from="Main/TB_krizanja" to="." method="_on_B_krizanja_pressed"]

[connection signal="pressed" from="Svojstva/B_back2" to="." method="_on_B_back_pressed"]

[connection signal="pressed" from="Krizanja/B_back" to="." method="_on_B_back_pressed"]

[connection signal="pressed" from="Krizanja/B_mon" to="." method="_on_B_zadatak_pressed"]

[connection signal="pressed" from="Krizanja/B_mon" to="Zadatci" method="_on_B_mon_pressed"]

[connection signal="pressed" from="Krizanja/B_monSND" to="." method="_on_B_zadatak_pressed"]

[connection signal="pressed" from="Krizanja/B_monSND" to="Zadatci" method="_on_B_monSND_pressed"]

[connection signal="pressed" from="Krizanja/B_monT" to="." method="_on_B_zadatak_pressed"]

[connection signal="pressed" from="Krizanja/B_monT" to="Zadatci" method="_on_B_monT_pressed"]

[connection signal="pressed" from="Krizanja/B_dihibrid" to="." method="_on_B_zadatak_pressed"]

[connection signal="pressed" from="Krizanja/B_dihibrid" to="Zadatci" method="_on_B_dihibrid_pressed"]

[connection signal="pressed" from="Krizanja/T_screen/TB_back" to="." method="_on_B_back_pressed"]

[connection signal="pressed" from="Krizanja/T_screen/TB_mon" to="." method="_on_B_mon_pressed"]

[connection signal="pressed" from="Zadatci/Panel/B_odgovor" to="Zadatci" method="_on_B_odgovor_pressed"]

[connection signal="pressed" from="Zadatci/Panel/TB_odgovor" to="Zadatci" method="_on_B_odgovor_pressed"]

[connection signal="pressed" from="Zadatci/Panel/Buttons/B_again" to="Zadatci" method="_on_B_again_pressed"]

[connection signal="pressed" from="Zadatci/Panel/Buttons/B_back" to="Zadatci" method="_on_B_back_pressed"]

[connection signal="pressed" from="Zadatci/Panel/Buttons/TB_again" to="Zadatci" method="_on_B_again_pressed"]

[connection signal="pressed" from="Zadatci/Panel/Buttons/TB_back" to="Zadatci" method="_on_B_back_pressed"]


